finish desktop and mobile

--- a/them.css
+++ b/them.css
@@ -37,9 +37,9 @@ footer{
 }
 
 }
-/* descktop viwport */
+/* tablet viwport */
 
-@media  (min-width:768px ) and (max-width : 960px){
+@media  (min-width:768px ) {
 
     #subContainer-1 div {
         background-color: rgb(243, 162, 159);
@@ -77,7 +77,45 @@ footer{
     }
     
     }
+    @media  (min-width : 960px){
 
+        #subContainer-1 div {
+            background-color: rgb(243, 162, 159);
+        }
+        #subContainer-1 div:last-of-type{
+            background-color: rgb(161, 97, 97);
+        }
+        #subContainer-2 div {
+            
+            background-color: rgb(209, 209, 176);
+            
+        }
+        #subContainer-2 div:nth-of-type(2){
+            background-color: rgb(181, 224, 181);
+        }
+        #subContainer-2 div:nth-of-type(3){
+            background-color: rgb(176, 224, 238);
+        }
+        #subContainer-2 div:nth-of-type(4){
+            background-color: rgb(216, 163, 209);
+        }
+        header{
+           
+            background-color: rgb(94, 108, 109);
+        }
+        aside{
+        
+            background-color: rgb(187, 179, 156);       
+        }
+        
+        footer{
+        
+            background-color: rgb(144, 187, 162);
+            border: rgb(240, 118, 118) 1px solid;
+        }
+        
+        }
+    
 
 
 
