--- a/base.css
+++ b/base.css
@@ -9,7 +9,7 @@
     
 }
 
-/*desktop view*/
+/*tablet*/
 @media  (min-width:768px ) and (max-width : 960px){
     #containerAll{
         width: 960px;
@@ -24,3 +24,16 @@
     
    
 }
+/* desktop view */
+@media  (min-width:960px ) {
+    #containerAll{
+        width: 960px;
+        margin: 0 auto;
+        overflow: hidden;
+        
+    
+    }
+    header,footer,aside{
+        border: black 1px solid;
+    }
+    }
