--- a/module.css
+++ b/module.css
@@ -41,5 +41,30 @@
     
 
 }
+@media  (min-width:960px ) {
+
+
+
+    #subContainer-1 div {
+        width: 380px;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: black 1px solid;
+    }
+    #subContainer-2 div {
+        width: 190px;
+        height: 250px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: black 1px solid;
+    }
+    
+    *{
+        box-sizing: border-box;
+    }
+    }
 
 
